<resources>
    <string name="app_name">Dartmouth Naps</string>

    <!-- Campus Map Activity -->
    <string name="campus_map_title">Dartmouth Map</string>
    <string name="campus_map_style_json">
    [
        {
            \"featureType\": \"poi\",
            \"stylers\": [
                { \"visibility\": \"off\" }
            ]
        },{
            \"featureType\": \"transit\",
            \"stylers\": [
                { \"visibility\": \"off\" }
            ]
        }
    ]
    </string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_login_button">Log in</string>
    <string name="text_signup">"Don't have an account? Sign up"</string>
    <string name="text_create_account">"Create an Account"</string>
    <string name="text_signup_button">Sign up</string>
    <string name="invalid_login_text">"Please enter a valid username and password!"</string>
    <string name="invalid_signup_text">"Unable to sign up."</string>
    <string name="empty_fields_text">"Please enter a username and password!"</string>
    <string name="oops_title">Oops!</string>
    <string name="text_my_reviews">My Active Reviews</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_text_reviews">Reviews</string>
    <string name="text_open">OPEN</string>
    <string name="text_close">CLOSE</string>
    <string name="text_welcome_back">"Welcome Back, Sleepy Head!"</string>
    <string name="nav_text_map">Map</string>
    <string name="nav_text_starred_locations">Starred Locations</string>
    <string name="text_sign_up_to_review">Sign Up to Review</string>
    <string name="text_all_locations">All Locations</string>



    <!-- Buttons -->
    <string name="submit_button">Submit</string>

    <!-- Map Activity -->
    <string name="add_review">Add Review</string>

    <!-- Review Fragment-->
    <string name="comment_author">XD</string>
    <string name="comment_date_time">Feb 12 5:20pm</string>
    <string name="comment_location">First Floor 007</string>
    <string name="comment_body">this is a terrible place to nap during 12s</string>
    <string name="title_activity_new_comment">NewCommentActivity</string>

    <!-- New Review Activity -->
    <string name="location_label">Place</string>
    <string name="text_label">Text</string>
    <string name="text_hint">Enter comments here</string>
    <string name="noise_label">Noise</string>
    <string name="comfort_label">Comfort</string>
    <string name="light_label">Light</string>
    <string name="convenience_label">Convenience</string>
</resources>
