<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewCommentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:textSize="28sp"
        android:layout_marginBottom="10sp"
        android:textColor="@color/colorHeader"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_margin="10dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_label"
        android:textSize="28sp"
        android:layout_marginBottom="10sp"
        android:textColor="@color/colorHeader"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint"
        android:layout_margin="10dp"
        android:minHeight="100sp"
        android:textColor="@color/colorCommentBody"
        android:fontFamily="@font/montserrat_regular"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textSize="22sp"
        android:background="@color/colorPrimaryButton"
        android:textColor="@color/colorButtonText"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:onClick="submitComment"/>




</LinearLayout>