<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="start"
                android:id="@+id/comment_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_author"
                android:textColor="@color/colorCommentHeader"
                android:fontFamily="@font/montserrat_medium" />

            <TextView
                android:layout_gravity="end"
                android:id="@+id/comment_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_date_time"
                android:textColor="@color/colorCommentHeader"
                android:fontFamily="@font/montserrat_regular"/>

        </LinearLayout>

        <TextView
            android:id="@+id/comment_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comment_location"
            android:textColor="@color/colorCommentHeader"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/montserrat_medium" />

        <TextView
            android:id="@+id/comment_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comment_body"
            android:textColor="@color/colorCommentBody"
            android:fontFamily="@font/montserrat_regular" />

    </LinearLayout>



</FrameLayout>