<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:paddingTop="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text_create_account"
        android:textColor="#FFFFFF"
        android:textSize="60dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableStart="@drawable/ic_person_white_24dp"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:drawablePadding="-30dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="-30dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textAlignment="center"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/login_button"
        android:fontFamily="@font/montserrat"
        android:onClick="onSignupClicked"
        android:text="@string/text_signup_button"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>