<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ReviewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/review_image"
                    android:layout_width="match_parent"
                    android:layout_height="300sp"
                    android:layout_marginTop="10dp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/review_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:fontFamily="@font/montserrat_bold"
                android:minHeight="10sp"
                android:textColor="@color/colorHeader"
                android:textCursorDrawable="@null"
                android:textSize="42sp" />

            <fragment
                app:title="@string/noise_label"
                app:disabled="true"
                android:name="edu.dartmouth.cs65.dartmouthnaps.fragments.RatingFragment"
                android:id="@+id/noise_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <fragment
                app:title="@string/comfort_label"
                app:disabled="true"
                android:name="edu.dartmouth.cs65.dartmouthnaps.fragments.RatingFragment"
                android:id="@+id/comfort_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <fragment
                app:title="@string/light_label"
                app:disabled="true"
                android:name="edu.dartmouth.cs65.dartmouthnaps.fragments.RatingFragment"
                android:id="@+id/light_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <fragment
                app:title="@string/convenience_label"
                app:disabled="true"
                android:name="edu.dartmouth.cs65.dartmouthnaps.fragments.RatingFragment"
                android:id="@+id/convenience_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>